includes/css/arconix-shortcodes.css
/*
ARCONIX SHORTCODES CSS
-------------------------------------------

PLEASE DO NOT make modifications to this file directly as it will be overwritten on update.
Instead, save a copy of this file to your theme or child theme directory. It will then be
loaded in place of the plugin's version and will maintain your changes on upgrade

*/
/* Accordion Styling
------------------------------------------------------------ */
.arconix-accordions {
  border: 1px solid #ddd;
  border-bottom: none;
  margin: 10px 0 !important;
}
.arconix-accordions i.fa {
  margin: 0 .75em;
}
.arconix-accordion-title p {
  position: relative !important;
  top: -22px !important;
  left: 25px !important;
}
/* Accordion Title */
.arconix-accordion-title {
  background-color: #e9e9e9;
  border-top: 1px solid #fff;
  border-bottom: 1px solid #ddd;
  color: #333;
  cursor: pointer;
  font-size: 14px;
  font-weight: normal;
  letter-spacing: 1.6px;
  line-height: 21px;
  margin: 0 !important;
  padding: 5px;
  text-transform: uppercase;
}
.arconix-accordion-title i.fa:before {
  content: "\f0da";
  /* fa-caret-right */
}
.arconix-accordion-title.current {
  background: #e9e9e9;
}
.arconix-accordion-title.current i.fa:before {
  content: "\f0d7";
  /* fa-caret-down */
}
.arconix-accordion-title:hover {
  background-color: #f0f0f0;
}
.arconix-accordion-title.current,
.arconix-accordion-title.current:hover,
.arconix-accordion-title.current:active {
  background-color: #f0f0f0;
  cursor: default;
}
/* Individual Accordion Content Pane */
.arconix-accordion-content {
  background-color: #fbfbfb;
  border-bottom: 1px solid #ddd;
  display: none;
  height: auto;
  padding: 15px;
  color: #333;
  font-size: 12px;
}
.arconix-accordion-content p:last-child {
  margin-bottom: 0;
}
/* a title inside pane */
.arconix-accordions-vertical .arconix-accordion-content h4 {
  font-weight: normal;
  margin: 0 0 -5px 0;
  font-size: 16px;
  color: #666;
}
/* Box Styling
------------------------------------------------------------ */
.arconix-box {
  position: relative;
  clear: both;
  margin: 1em 0;
  padding: 1em;
}
.arconix-box > i.fa {
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
}
.arconix-box a,
.arconix-box a:hover {
  text-decoration: underline;
}
.arconix-box .arconix-box-content {
  /* If there is an icon in use, it will wrap the box content in a div with the following class */
  margin-left: 45px;
}
.arconix-box .arconix-box-content p:last-child {
  margin-bottom: 0;
}
.arconix-box-black {
  background-color: #333333;
  color: #fff;
}
.arconix-box-black a {
  color: #fff !important;
}
.arconix-box-blue {
  background-color: #214b8a;
  color: #fff;
}
.arconix-box-blue a {
  color: #fff !important;
}
.arconix-box-lblue {
  background-color: #dbe7f8;
  border: 1px solid #b0cbf0;
  color: #1e529c;
}
.arconix-box-lblue a {
  color: #1e529c !important;
}
.arconix-box-green {
  background-color: #36a563;
  color: #fff;
}
.arconix-box-green a {
  color: #fff !important;
}
.arconix-box-lgreen {
  background-color: #f2f9e5;
  border: 1px solid #ddefbc;
  color: #75a025;
}
.arconix-box-lgreen a {
  color: #75a025 !important;
}
.arconix-box-gray,
.arconix-box-grey {
  background-color: #6e6e6e;
  color: #fff;
}
.arconix-box-gray a,
.arconix-box-grey a {
  color: #fff !important;
}
.arconix-box-lgray,
.arconix-box-lgrey {
  background-color: #f2f2f2;
  border: 1px solid #d9d9d9;
  color: #666666;
}
.arconix-box-lgray a,
.arconix-box-lgrey a {
  color: #666666 !important;
}
.arconix-box-orange {
  background-color: #cf5300;
  color: #fff;
}
.arconix-box-orange a {
  color: #fff !important;
}
.arconix-box-purple {
  background-color: #923195;
  color: #fff;
}
.arconix-box-purple a {
  color: #fff !important;
}
.arconix-box-red {
  background-color: #e5684b;
  color: #fff;
}
.arconix-box-red a {
  color: #fff !important;
}
.arconix-box-lred {
  background-color: #ffdfdf;
  border: 1px solid #ffacac;
  color: #c50000;
}
.arconix-box-lred a {
  color: #c50000 !important;
}
.arconix-box-tan {
  background-color: #e5ac4b;
  color: #fff;
}
.arconix-box-tan a {
  color: #fff !important;
}
.arconix-box-ltan {
  background-color: #fef8e1;
  border: 1px solid #fcecb0;
  color: #c09a06;
}
.arconix-box-ltan a {
  color: #c09a06 !important;
}
.arconix-box-yellow {
  background-color: #fee975;
  border: 1px solid #fee142;
  color: #5a4c01;
}
.arconix-box-yellow a {
  color: #5a4c01 !important;
}
/* Button Styling
------------------------------------------------------------ */
.arconix-button,
.arconix-button-flat,
.arconix-button-clear {
  cursor: pointer;
  display: inline-block;
  margin-bottom: 10px;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  background-image: none;
  line-height: 1.5;
  max-width: 90%;
  text-decoration: none;
}
.arconix-button:hover,
.arconix-button-flat:hover,
.arconix-button-clear:hover {
  text-decoration: none;
}
.arconix-button i.fa,
.arconix-button-flat i.fa,
.arconix-button-clear i.fa {
  margin-right: 0.5em;
}
.arconix-button-clear {
  -webkit-border-radius: 5px 5px 5px 5px;
  -moz-border-radius: 5px 5px 5px 5px;
  -o-border-radius: 5px 5px 5px 5px;
  border-radius: 5px 5px 5px 5px;
  background: transparent;
}
.arconix-button {
  -webkit-border-radius: 5px 5px 5px 5px;
  -moz-border-radius: 5px 5px 5px 5px;
  -o-border-radius: 5px 5px 5px 5px;
  border-radius: 5px 5px 5px 5px;
  -webkit-box-shadow: inset 0 1px 0 0 #cccccc;
  -moz-box-shadow: inset 0 1px 0 0 #cccccc;
  box-shadow: inset 0 1px 0 0 #cccccc;
}
/* ... */

